# qrcode

libqr/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  libqr_shared.vcxproj  libqr_shared.vcxproj.filters  libqr_static.vcxproj  libqr_static.vcxproj.filters  qr.c  qr.sln  qrcmd.c  qrcmd.vcxproj  qrcmd.vcxproj.filters  qrcmd_multi.vcxproj  qrcnv.c  qrcnv_png.c  qrcnv_svg.c  qrcnv_tiff.c
libqr/Debug/: qrd.lib  qrstaticd.lib
libqr/Release/: qr.lib  qrstatic.lib
test/: test.cpp  test.vcxproj
